adiciona tela inicial de teste

--- a/Frontend/src/app/components/acompanhamento/acompanhamento.component.html
+++ b/Frontend/src/app/components/acompanhamento/acompanhamento.component.html
@@ -1,1 +1,3 @@
-<p>acompanhamento works!</p>
+<ul *ngFor="let acompanhamento of acompanhamentos">
+  <li>Acompanhamento: {{acompanhamento.nome}} | Preço: R${{acompanhamento.preco}}</li>
+</ul>
