--- a/Frontend/src/app/components/tamanho/tamanho.component.html
+++ b/Frontend/src/app/components/tamanho/tamanho.component.html
@@ -1,1 +1,3 @@
-<p>tamanho works!</p>
+<ul *ngFor="let tamanho of tamanhos">
+  <li>Tamanho: {{tamanho.nome}} | Multiplicador de Preço: {{tamanho.multiplicadorPreco}}</li>
+</ul>
