--- a/Frontend/src/app/components/tamanho/tamanho.component.html
+++ b/Frontend/src/app/components/tamanho/tamanho.component.html
@@ -1,3 +1,3 @@
 <ul *ngFor="let tamanho of tamanhos">
-  <li>Tamanho: {{tamanho.nome}} | Multiplicador de Preço: {{tamanho.multiplicadorPreco}}</li>
+  <li>Tamanho: {{tamanho.nome}} | Fatias: {{tamanho.qntdFatias}}</li>
 </ul>
