--- a/Frontend/src/app/components/cliente/cliente.component.html
+++ b/Frontend/src/app/components/cliente/cliente.component.html
@@ -1,3 +1,27 @@
+<form [formGroup]="formulario" (ngSubmit)="cadastrarCliente()" >
+  <div class="form-group">
+    <label>Nome</label>
+    <input type="text" formControlName="nome"> 
+  </div>
+  <div class="form-group">
+    <label>Cpf</label>
+    <input type="text" formControlName="cpf"> 
+  </div>
+  <div class="form-group">
+    <label>Telefone:</label>
+    <input type="text" formControlName="telefone"> 
+  </div>
+  <div class="form-group">
+    <label>Data de Nascimento:</label>
+    <input type="date" formControlName="dataAniversario"> 
+  </div>
+  <div class="form-group">
+    <button type="submit">Cadastrar</button>
+  </div>
+</form>
+
+<hr>
+
 <ul *ngFor="let cliente of clientes">
   <li>Cpf: {{cliente.cpf}} | Nome: {{cliente.nome}}</li>
 </ul>
