--- a/Frontend/src/app/components/cliente/cliente.component.html
+++ b/Frontend/src/app/components/cliente/cliente.component.html
@@ -1,67 +1,69 @@
-<form [formGroup]="formulario" (ngSubmit)="cadastrarCliente()" >
+<form [formGroup]="formularioCliente" (ngSubmit)="cadastrarCliente()" >
   <fieldset>
     <legend>Cliente</legend>
     <div class="form-group">
       <label>Nome</label>
-      <input type="text" formControlName="nome"> 
+      <input type="text" formControlName="nome">
     </div>
     <div class="form-group">
       <label>Cpf</label>
-      <input type="text" formControlName="cpf"> 
+      <input type="text" formControlName="cpf">
     </div>
     <div class="form-group">
       <label>Telefone:</label>
-      <input type="text" formControlName="telefone"> 
+      <input type="text" formControlName="telefone">
     </div>
     <div class="form-group">
       <label>Data de Nascimento:</label>
-      <input type="date" formControlName="dataAniversario"> 
+      <input type="date" formControlName="dataAniversario">
     </div>
   </fieldset>
+</form>
 
+<form [formGroup]="formularioEndereco">
   <fieldset>
       <legend>Endereço</legend>
       <div class="form-group">
         <label>Rua:</label>
-        <input type="text" formControlName="rua"> 
+        <input type="text" formControlName="rua">
       </div>
       <div class="form-group">
         <label>Numero:</label>
-        <input type="number" formControlName="numero"> 
+        <input type="number" formControlName="numero">
       </div>
       <div class="form-group">
         <label>CEP:</label>
-        <input type="number" formControlName="cep"> 
+        <input type="text" formControlName="cep">
       </div>
       <div class="form-group">
         <label>Complemento:</label>
-        <input type="text" formControlName="complemento"> 
-      </div>
-      <div class="form-group">
-        <label>Cidade:</label>
-        <input type="text" formControlName="cidade"> 
-      </div>
-      <div class="form-group">
-        <label>Estado:</label>
-        <input type="text" formControlName="estado"> 
+        <input type="text" formControlName="complemento">
       </div>
       <div class="form-group">
         <label>Regiao:</label>
-        <select>
-          <option *ngFor="let regiao of regioes">
+        <select formControlName="regiao">
+          <option [ngValue]="null" disabled>Selecione uma Regiao</option>
+          <option *ngFor="let regiao of regioes" [ngValue]="regiao">
             {{regiao.nome}}
           </option>
         </select>
       </div>
   </fieldset>
-
-  <div class="form-group">
-    <button type="submit">Cadastrar</button>
-  </div>
 </form>
 
+<div class="form-group">
+  <button type="submit" (click)="cadastrarCliente()">Cadastrar</button>
+</div>
 <hr>
 
 <ul *ngFor="let cliente of clientes">
-  <li>Cpf: {{cliente.cpf}} | Nome: {{cliente.nome}}</li>
+  <li>Cpf: {{cliente.cpf}} | Nome: {{cliente.nome}}
+    <ul>
+      <li>CEP: {{cliente.endereco.cep}} |
+        {{cliente.endereco.rua}} N° {{cliente.endereco.numero}}</li>
+      <!-- Mostra o complemento do endereco caso exista -->
+      <p *ngIf="cliente.endereco.complemento"> Complemento: {{cliente.endereco.complemento}}</p>
+    </ul>
+  </li>
+
 </ul>
