--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <h1>Pizzaria Angular</h1>
+<p>Bem vindo {{cliente.nome}}</p>
 
 <table>
   <tr>
@@ -6,6 +7,7 @@
     <td><button routerLink="/home/acompanhamentos">Acompanhamentos</button></td>
     <td><button routerLink="/home/sabores">Sabores</button></td>
     <td><button routerLink="/home/tamanhos">Tamanhos</button></td>
+    <td><button (click)="deslogar()">SAIR</button></td>
   </tr>
 </table>
 
