renomeia modulo sabores

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -5,8 +5,7 @@
   <tr>
     <td><button routerLink="/home/clientes">Clientes</button></td>
     <td><button routerLink="/home/acompanhamentos">Acompanhamentos</button></td>
-    <td><button routerLink="/home/sabores">Sabores</button></td>
-    <td><button routerLink="/home/tamanhos">Tamanhos</button></td>
+    <td><button routerLink="/home/sabores">Pizzas</button></td>
     <td>
         <button routerLink="/home/carrinho">Carrinho
           <span *ngIf="quantidadeItensCarrinho.value > 0" class="d-inline">
