cria componente para adicionar pizzas

--- a/Frontend/src/app/components/acompanhamento/acompanhamento.component.html
+++ b/Frontend/src/app/components/acompanhamento/acompanhamento.component.html
@@ -2,5 +2,5 @@
   <li>{{acompanhamento.nome}} | Preço: R${{acompanhamento.preco}}</li>
   <label>Quantidade:</label>
   <input type="number" #quantidade>
-  <button (click)="adicionarAcompanhamentoAoCarrinho(acompanhamento)">Adicionar</button>
+  <button (click)="adicionarAoCarrinho(acompanhamento)">Adicionar</button>
 </ul>
