--- a/Frontend/src/app/components/pizzas/pizzas.component.html
+++ b/Frontend/src/app/components/pizzas/pizzas.component.html
@@ -1,3 +1,16 @@
-<ul *ngFor="let sabor of sabores">
-  <li>Sabor: {{sabor.nome}} | Preço: R${{sabor.preco}}</li>
-</ul>
+<label>Tamanho: </label>
+
+<select [(ngModel)]="tamanho">
+  <option [ngValue]="null" disabled>Selecione um tamanho</option>
+  <option *ngFor="let tamanho of tamanhos" [ngValue]="tamanho">{{tamanho.nome}}</option>
+</select>
+
+<div *ngIf="tamanho.qntdFatias > 0">
+  <p [(ngModel)]="tamanho" ngDefaultControl>Fatias:{{tamanho.qntdFatias}} | Sabores: {{tamanho.maxSabores}}</p>
+
+  <div *ngFor="let sabor of sabores" #saboresCheckbox>
+    <input type="checkbox" [value]="sabor" (change)="adicionarSabor(sabor)" >{{sabor.nome}} | Preço: R${{sabor.preco}}
+  </div>
+
+  <button (click)="adicionarAoCarrinho()">Adicionar</button>
+</div>
