--- a/Frontend/src/app/components/pedidos/pedidos.component.html
+++ b/Frontend/src/app/components/pedidos/pedidos.component.html
@@ -1,9 +1,10 @@
 <ul *ngFor="let pedido of meusPedidos">
-    <li *ngFor="let pizza of pedido.pizzas; let i=index">
+    <li *ngFor="let pizza of pedido.pizzas">
         Pedido {{pedido.id}} |
-        Quantidade: {{pizza.quantidade}} |
-        <span>{{descricoes[i]}}</span> | 
-        Data: {{pedido.horaPedido}} | 
+        Quantidade: {{pizza}}
+        <p>{{pizza.tamanho.nome}} | {{pizza.sabores | json}}</p>
+        <p *ngIf="pedido.acompanhamentos.length > 0">{{pedido.acompanhamentos | json}}</p>
+        Data: {{pedido.horaPedido}} |
         Preço: R${{pedido.precoTotal}}
     </li>
 </ul>
