coloca pedidos na area do cliente

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 
 <table>
   <tr>
-    <td><button routerLink="/home/clientes">Clientes</button></td>
+    <td><button routerLink="/home/clientes">Área do Cliente</button></td>
     <td><button routerLink="/home/pedidos">Meus Pedidos</button></td>
     <td><button routerLink="/home/acompanhamentos">Acompanhamentos</button></td>
     <td><button routerLink="/home/sabores">Pizzas</button></td>
