valida input no login

--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
     <legend>Cliente</legend>
     <div class="form-group">
       <label>Cpf:</label>
-      <input type="text" formControlName="cpf">
+      <input type="text" id="name" formControlName="cpf" required>
     </div>
   <button type="submit">Entrar</button>
 </form>
