--- a/Frontend/src/app/components/cadastro/cadastro.component.html
+++ b/Frontend/src/app/components/cadastro/cadastro.component.html
@@ -1,61 +1,67 @@
-<table>
-  <tr>
-    <td><button routerLink="/cadastro">Cadastro</button></td>
-    <td><button routerLink="/login">Login</button></td>
-  </tr>
-</table>
+<div class="container mt-4">
+  <div class="row justify-content-lg-start">
+    <div class="col-md-6">
+      <table class="mb-4">
+        <tr>
+          <td><button class="btn btn-primary" routerLink="/cadastro">Cadastro</button></td>
+          <td><button class="btn btn-secondary" routerLink="/login">Login</button></td>
+        </tr>
+      </table>
 
-<hr>
+      <hr>
 
-<form [formGroup]="formularioCliente">
-  <fieldset>
-    <legend>Cliente</legend>
-    <div class="form-group">
-      <label>Cpf*:</label>
-      <input type="text" formControlName="cpf" required>
-    </div>
-    <div class="form-group">
-      <label>Nome*:</label>
-      <input type="text" formControlName="nome" required>
-    </div>
-    <div class="form-group">
-      <label>Telefone*:</label>
-      <input type="text" formControlName="telefone" required>
-    </div>
-    <div class="form-group">
-      <label>Data de Nascimento*:</label>
-      <input type="date" formControlName="dataAniversario" required>
-    </div>
-  </fieldset>
-</form>
+      <form [formGroup]="formularioCliente">
+        <fieldset>
+          <legend>Cliente</legend>
+          <div class="form-group">
+            <label for="cpf">Cpf*:</label>
+            <input type="text" id="cpf" class="form-control" formControlName="cpf" required>
+          </div>
+          <div class="form-group">
+            <label for="nome">Nome*:</label>
+            <input type="text" id="nome" class="form-control" formControlName="nome" required>
+          </div>
+          <div class="form-group">
+            <label for="telefone">Telefone*:</label>
+            <input type="text" id="telefone" class="form-control" formControlName="telefone" required>
+          </div>
+          <div class="form-group">
+            <label for="dataAniversario">Data de Nascimento*:</label>
+            <input type="date" id="dataAniversario" class="form-control" formControlName="dataAniversario" required>
+          </div>
+        </fieldset>
+      </form>
 
-<form [formGroup]="formularioEndereco">
-<fieldset>
-  <legend>Endereço</legend>
-  <div class="form-group">
-    <label>CEP*:</label>
-    <input type="text" formControlName="cep" required>
-    <button (click)="buscarCEP()">Buscar CEP</button>
-  </div>
-  <div class="form-group">
-    <label>Rua*:</label>
-    <input type="text" formControlName="rua" required>
-  </div>
-  <div class="form-group">
-    <label>Regiao*:</label>
-    <input type="text" formControlName="regiao" required>
-  </div>
-  <div class="form-group">
-    <label>Numero*:</label>
-    <input type="number" formControlName="numero" required>
-  </div>
-  <div class="form-group">
-    <label>Complemento:</label>
-    <input type="text" formControlName="complemento">
-  </div>
-</fieldset>
-</form>
+      <form [formGroup]="formularioEndereco">
+        <fieldset>
+          <legend>Endereço</legend>
+          <div class="form-group">
+            <label for="cep">CEP*:</label>
+            <input type="text" id="cep" class="form-control" formControlName="cep" required>
+            <button class="btn btn-info" (click)="buscarCEP()">Buscar CEP</button>
+          </div>
+          <div class="form-group">
+            <label for="rua">Rua*:</label>
+            <input type="text" id="rua" class="form-control" formControlName="rua" required>
+          </div>
+          <div class="form-group">
+            <label for="regiao">Região*:</label>
+            <input type="text" id="regiao" class="form-control" formControlName="regiao" required>
+          </div>
+          <div class="form-group">
+            <label for="numero">Número*:</label>
+            <input type="number" id="numero" class="form-control" formControlName="numero" required>
+          </div>
+          <div class="form-group">
+            <label for="complemento">Complemento:</label>
+            <input type="text" id="complemento" class="form-control" formControlName="complemento">
+          </div>
+        </fieldset>
+      </form>
 
-<div class="form-group">
-  <button type="submit" (click)="cadastrarCliente()">Cadastrar</button>
+      <div class="form-group">
+        <button type="submit" class="btn btn-success" (click)="cadastrarCliente()">Cadastrar</button>
+      </div>
+    </div>
+  </div>
 </div>
