--- a/Frontend/src/app/components/cadastro/cadastro.component.html
+++ b/Frontend/src/app/components/cadastro/cadastro.component.html
@@ -1,67 +1,59 @@
-<div class="container mt-4">
-  <div class="row justify-content-lg-start">
-    <div class="col-md-6">
-      <table class="mb-4">
-        <tr>
-          <td><button class="btn btn-primary" routerLink="/cadastro">Cadastro</button></td>
-          <td><button class="btn btn-secondary" routerLink="/login">Login</button></td>
-        </tr>
-      </table>
+ <form style="width: 23rem;" [formGroup]="formularioCliente">
+    <h3 class="fw-normal mb-3 pb-3">Cadastro</h3>
 
-      <hr>
-
-      <form [formGroup]="formularioCliente">
-        <fieldset>
-          <legend>Cliente</legend>
-          <div class="form-group">
-            <label for="cpf">Cpf*:</label>
-            <input type="text" id="cpf" class="form-control" formControlName="cpf" required>
-          </div>
-          <div class="form-group">
-            <label for="nome">Nome*:</label>
-            <input type="text" id="nome" class="form-control" formControlName="nome" required>
-          </div>
-          <div class="form-group">
-            <label for="telefone">Telefone*:</label>
-            <input type="text" id="telefone" class="form-control" formControlName="telefone" required>
-          </div>
-          <div class="form-group">
-            <label for="dataAniversario">Data de Nascimento*:</label>
-            <input type="date" id="dataAniversario" class="form-control" formControlName="dataAniversario" required>
-          </div>
-        </fieldset>
-      </form>
-
-      <form [formGroup]="formularioEndereco">
-        <fieldset>
-          <legend>Endereço</legend>
-          <div class="form-group">
-            <label for="cep">CEP*:</label>
-            <input type="text" id="cep" class="form-control" formControlName="cep" required>
-            <button class="btn btn-info" (click)="buscarCEP()">Buscar CEP</button>
-          </div>
-          <div class="form-group">
-            <label for="rua">Rua*:</label>
-            <input type="text" id="rua" class="form-control" formControlName="rua" required>
-          </div>
-          <div class="form-group">
-            <label for="regiao">Região*:</label>
-            <input type="text" id="regiao" class="form-control" formControlName="regiao" required>
-          </div>
-          <div class="form-group">
-            <label for="numero">Número*:</label>
-            <input type="number" id="numero" class="form-control" formControlName="numero" required>
-          </div>
-          <div class="form-group">
-            <label for="complemento">Complemento:</label>
-            <input type="text" id="complemento" class="form-control" formControlName="complemento">
-          </div>
-        </fieldset>
-      </form>
-
-      <div class="form-group">
-        <button type="submit" class="btn btn-success" (click)="cadastrarCliente()">Cadastrar</button>
-      </div>
+    <div class="form-outline mb-4">
+      <input type="text" class="form-control form-control" formControlName="cpf" required />
+      <label class="form-label">CPF</label>
     </div>
-  </div>
-</div>
+
+    <div class="form-outline mb-4">
+      <input type="text" class="form-control form-control" formControlName="nome" required />
+      <label class="form-label">Nome</label>
+    </div>
+
+    <div class="form-outline mb-4">
+      <input type="text" class="form-control form-control" formControlName="telefone" required />
+      <label class="form-label">Telefone</label>
+    </div>
+
+    <div class="form-outline mb-4">
+      <input type="date" class="form-control form-control" formControlName="dataAniversario" required />
+      <label class="form-label">Data de Nascimento</label>
+    </div>
+  </form>
+
+<form [formGroup]="formularioEndereco" style="width: 23rem;">
+  <fieldset>
+    <legend>Endereço</legend>
+    <div class="form-outline mb-4">
+      <input type="text" class="form-control form-control d-inline" style="width: 40%" formControlName="cep" required />
+      <button (click)="buscarCEP()" class="btn btn-info d-inline ml-2">Buscar CEP</button>
+      <label class="form-label d-block">CEP</label>
+    </div>
+
+    <div class="form-outline mb-4">
+      <input type="text" class="form-control form-control" formControlName="rua" required />
+      <label class="form-label">Rua</label>
+    </div>
+
+    <div class="form-outline mb-4">
+      <input type="text" class="form-control form-control" formControlName="regiao" required />
+      <label class="form-label">Regiao</label>
+    </div>
+
+    <div class="form-outline mb-4">
+      <input type="text" class="form-control form-control" formControlName="numero" required />
+      <label class="form-label">Numero</label>
+    </div>
+
+    <div class="form-outline mb-4">
+      <input type="text" class="form-control form-control" formControlName="complemento" />
+      <label class="form-label">Complemento</label>
+    </div>
+
+    <div class="pt-1 mb-4">
+      <button class="btn btn-info btn-lg" type="submit" (click)="cadastrarCliente()">Cadastrar</button>
+    </div>
+  </fieldset>
+
+</form>
