--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -1,55 +1,16 @@
-<!--<table>-->
-<!--  <tr>-->
-<!--    <td><button routerLink="/cadastro">Cadastro</button></td>-->
-<!--    <td><button routerLink="/login">Login</button></td>-->
-<!--  </tr>-->
-<!--</table>-->
+<div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
+  <form style="width: 23rem;" [formGroup]="formularioCliente" (ngSubmit)="logarCliente()">
 
-<!--<form [formGroup]="formularioCliente" (ngSubmit)="logarCliente()">-->
-<!--    <legend>Cliente</legend>-->
-<!--    <div class="form-group">-->
-<!--      <label>Cpf:</label>-->
-<!--      <input type="text" id="name" formControlName="cpf" required>-->
-<!--    </div>-->
-<!--  <button type="submit">Entrar</button>-->
-<!--</form>-->
+  <h3 class="fw-normal mb-3 pb-3">Login</h3>
 
-<section class="vh-100">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-6 text-black">
-
-        <div class="px-5 ms-xl-4">
-          <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
-          <h1 class="h1 fw-bold mb-0">Pizzaria Angular</h1>
-        </div>
-
-        <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
-
-          <form style="width: 23rem;" [formGroup]="formularioCliente" (ngSubmit)="logarCliente()">
-
-            <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Login</h3>
-
-            <div class="form-outline mb-4">
-              <input type="text" class="form-control form-control-lg" formControlName="cpf" required />
-              <label class="form-label">CPF</label>
-            </div>
-
-            <div class="pt-1 mb-4">
-              <button class="btn btn-info btn-lg btn-block" type="submit">Entrar</button>
-            </div>
-
-            <p>Para criar uma conta <a routerLink="/cadastro" class="link-info">Clique aqui</a></p>
-
-          </form>
-
-        </div>
-
-      </div>
-      <div class="col-sm-6 px-0 d-none d-sm-block">
-        <img src="https://images.unsplash.com/photo-1590947132387-155cc02f3212"
-             alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
-      </div>
-    </div>
+  <div class="form-outline mb-4">
+    <input type="text" class="form-control form-control-lg" formControlName="cpf" required />
+    <label class="form-label">CPF</label>
   </div>
-</section>
+
+  <div class="pt-1 mb-4">
+    <button class="btn btn-info btn-lg btn-block" type="submit">Entrar</button>
+  </div>
+
+  </form>
+</div>
