muda url clientes

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 
   <table>
     <tr>
-      <td><button class="btn btn-danger" routerLink="/home/clientes">Área do Cliente</button></td>
+      <td><button class="btn btn-danger" routerLink="/home/area-cliente">Área do Cliente</button></td>
       <td><button class="btn btn-danger" routerLink="/home/acompanhamentos">Acompanhamentos</button></td>
       <td><button class="btn btn-danger" routerLink="/home/sabores">Pizzas</button></td>
       <td>
