separa comprovantes em um componente proprio

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
   <table>
     <tr>
       <td><button class="btn btn-danger" routerLink="/home/area-cliente">Área do Cliente</button></td>
+      <td><button class="btn btn-danger" routerLink="/home/pedidos">Comprovantes</button></td>
       <td><button class="btn btn-danger" routerLink="/home/acompanhamentos">Acompanhamentos</button></td>
       <td><button class="btn btn-danger" routerLink="/home/sabores">Pizzas</button></td>
       <td>
