adiciona css nos comprovantes

--- a/Frontend/src/app/components/pedidos/pedidos.component.html
+++ b/Frontend/src/app/components/pedidos/pedidos.component.html
@@ -1,1 +1,26 @@
-<p>pedidos works!</p>
+<div class="container mt-4">
+  <h2 class="mt-4 mb-4">Meus Pedidos</h2>
+  <ul *ngFor="let pedido of pedidos" class="list-group">
+    <li class="list-group-item">
+      <label class="font-weight-bold">Pedido {{pedido.id}}</label>
+
+      <div class="card-body">
+        <ul>
+          <li *ngFor="let pizza of pedido.pizzas" class="mb-2">
+            {{getDescricaoPizza(pizza)}} | Quantidade: {{pizza.quantidade}} | Preço: {{pizza.preco | currency : "BRL"}}
+          </li>
+        </ul>
+
+        <ul *ngIf="pedido.acompanhamentos.length > 0">
+          <li *ngFor="let acomp of pedido.acompanhamentos" class="mb-2">
+            {{getDescricaoAcompanhamento(acomp)}} | Quantidade: {{acomp.quantidade}} | Preço: {{acomp.preco | currency : "BRL"}}
+          </li>
+        </ul>
+
+        <p class="mb-2">Data: {{pedido.horaPedido | date : "dd/MM/yyyy HH:mm"}}</p>
+        <p class="mb-2">Total do Pedido: R${{pedido.precoTotal | currency : "BRL"}}</p>
+
+      </div>
+    </li>
+  </ul>
+</div>
