--- a/Frontend/src/app/components/acompanhamento/acompanhamento.component.html
+++ b/Frontend/src/app/components/acompanhamento/acompanhamento.component.html
@@ -2,7 +2,7 @@
   <h3>Selecione seus acompanhamentos</h3>
 
   <ul *ngFor="let acompanhamento of acompanhamentos; let i = index" class="acompanhamento-item">
-    <li>{{acompanhamento.nome}} | Preço: R${{acompanhamento.preco}}</li>
+    <li class="font-weight-bold">{{acompanhamento.nome}} | Preço: R${{acompanhamento.preco}}</li>
     <label class="acompanhamento-quantity">Quantidade:</label>
     <input type="number" [(ngModel)]="quantidadeArray[i]" placeholder="0">
     <button class="acompanhamento-button" (click)="adicionarAoCarrinho(acompanhamento, quantidadeArray[i])">Adicionar</button>
